--- a/src/pages/homepage/home.css
+++ b/src/pages/homepage/home.css
@@ -2,6 +2,10 @@
   margin: auto;
   text-align: center;
   padding: 20% 0;
+
+  animation-name: fadeInFromBottom;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in;
 }
 
 #home-page h3 {
