--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #eaeef6;
+  background-image: url(./assets/background.png);
 }
 
 code {
