--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -1,11 +1,11 @@
 .popup {
   position: fixed;
-  width: 600px;
+  width: 700px;
   height: 600px;
   z-index: 15;
   top: 50%;
   left: 50%;
-  margin: -300px 0 0 -300px;
+  margin: -300px 0 0 -350px;
 
   display: flex;
   justify-content: center;
@@ -43,9 +43,26 @@
 .popup-inner h1 {
   font-size: 50px;
   color: black;
+  padding-top: 0px;
+  margin-top: 0;
 }
 
 .popup-inner a {
   text-decoration: none;
   color: #969a9f;
+}
+
+.popup-inner p {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+.popup-inner h2 {
+  color: black;
+}
+
+.popup-inner h3 {
+  font-size: 20px;
+  font-weight: 500;
+  color: rgb(96, 96, 96);
 }
