--- a/src/pages/portfolioPage/portfolio.css
+++ b/src/pages/portfolioPage/portfolio.css
@@ -13,7 +13,9 @@
   top: 50%;
   left: 50%;
   margin: -275px 0 0 -450px;
+}
 
+#portfolio-folder-background {
   animation-name: fadeInFromBottom;
   animation-duration: 1s;
   animation-timing-function: ease-in;
