--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.folder-background {
+  background-color: #525252;
+  border-radius: 15px;
+  width: 900px;
+  height: 550px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  position: absolute;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -275px 0 0 -450px;
+}
+
+.folder-body {
+  max-width: 700px;
+}
+
+.contents {
+  height: auto;
+  max-width: 700px;
+  display: grid;
+  align-items: flex-start;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 130px;
+  justify-content: space-evenly;
+  justify-items: center;
+  align-content: space-evenly;
+  padding-top: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.openfolder-nav {
+  width: 700px;
+  height: fit-content;
+}
+
+.openfolder-sidebar {
+  max-width: 200px;
+  height: 550px;
+}
+
+h1 {
+  color: white;
+}
